# stock_swing

./: .env.backup_20260501_193136  .env.example  .gitignore  GOVERNANCE.md  MUSTREAD_NAVIGATION.md  Makefile  README.md  RUNTIME_MODES.md  STATUS.md  pyproject.toml  requirements.txt
console/: README.md  app.py  manage.sh  start.sh  websocket_server.py
cron_backup/: CURRENT_JOBS.md  README.md  jobs.json  jobs.json.prev
docs/: 1year_maximization_strategy.md  MISSION_AND_STRATEGY.md  TELEGRAM_NOTIFICATIONS.md  account_migration_2026-05-01.md  alert_improvements_2026-04-28.md  backtest_engine_design.md  breakout_momentum_v2_improvement_plan.md  breakthrough_strategies.md  console_charts_guide.md  console_enhancement_plan.md  console_improvement_daily_log_template.md  console_improvement_tasks.md  console_phase1_implementation.md  console_review_report.md  console_robustness_improvement_plan.md  daily_summary_2026-04-27.md  daily_summary_2026-05-01.md  feature_portfolio_comparison_chart.md  gw_emergency_operations.md  gw_implementation_plan.md  implementation_schedule.md  implementation_summary_2026-05-01.md  learning_plan.md  metrics_enhancement_plan.md  operational_verification_checklist.md  operational_verification_log_2026-04-28.md  option_a_implementation_plan.md  parameter_tuning_guide.md  phase1_complete.md  phase1_progress.md  portfolio_allocation_implementation_plan.md  position_sizing_investigation_20260424.md  presentation_ai_investment_competition.md  presentation_ai_investment_competition_v2.md  risk_parameter_adjustment_2026-05-01.md  (+12 more)
memory/: 2026-03-27.md  (+5 more)
(+314 files in other folders)
